[tool.poetry]
name = "dipdup_app"
version = "0.1.0"
description = ""
authors = ["Satyam <na20b060@smail.iitm.ac.in>"]

[tool.poetry.dependencies]
python = "^3.8"
dipdup = "^4.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
